cif/org.eclipse.escet.cif.tests/tests/checks/VarNoInputCheck.cif.check.err
ERROR: CIF checks tester failed due to unsatisfied preconditions:
  ------------------------------------
  (1/1) Variable is an input variable.
  ------------------------------------
   * In the top-level scope of the specification:
     - input bool i;
                  ^
   * In group definition "G":
     - input bool i;
                  ^
     - input bool j;
                  ^
   * In group "g":
     - input bool i;
                  ^
     - input bool j;
                  ^
   * In automaton "g.a":
     - input bool i;
                  ^
     - input bool j;
                  ^
